--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "alpinejs": "^3.13.2",
     "astro": "^4.0.7",
     "sass": "^1.69.4",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vite": "^5.0.12"
   }
 }
