--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/alpinejs": "^3.13.3",
     "alpinejs": "^3.13.2",
     "astro": "^4.0.7",
+    "braces": "^3.0.3",
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.3",
     "vite": "^5.0.12"
