--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "serve dist/",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -17,6 +17,7 @@
     "astro": "^4.0.7",
     "braces": "^3.0.3",
     "sass": "^1.69.4",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.3.3",
     "vite": "^5.0.12"
   }
